--- a/fluidSimulator.cabal
+++ b/fluidSimulator.cabal
@@ -16,7 +16,7 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules: FluidCube,FluidSimulationUtils
+  exposed-modules: FluidSquare,FluidSimulationUtils
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.9 && <4.10,repa
