--- a/fluidSimulator.cabal
+++ b/fluidSimulator.cabal
@@ -22,3 +22,10 @@ library
   build-depends:       base >=4.9 && <4.10,repa
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+executable fluidSimWebServer
+    hs-source-dirs: server
+    main-is: Main.hs
+    build-depends:
+        base >= 4 && < 5,
+        happstack-server
