--- a/fluidSimulator.cabal
+++ b/fluidSimulator.cabal
@@ -28,4 +28,7 @@ executable fluidSimWebServer
     main-is: Main.hs
     build-depends:
         base >= 4 && < 5,
-        happstack-server
+        happstack-server,
+        blaze-html,
+        blaze-markup,
+        neat-interpolation
